--- a/src/style/scss/helpers/_base.scss
+++ b/src/style/scss/helpers/_base.scss
@@ -1,20 +1,9 @@
-$text-grey: #00807E;
-$text-grey-100: #818A91;
-
-img {
-  max-width: 100%;
-  display: block;
+.ta-center{
+  text-align: center;
 }
-
-body {
-  font-family: "Noto Sans TC", "Microsoft JhengHei", sans-serif;
+.fz-24{
+  font-size: 24px;
 }
-
-*, *::after, *::before {
-  box-sizing: border-box;
-  transition: all .2s;
-}
-
 
 .d-flex{
   display: flex;
