--- a/src/style/css/all.css
+++ b/src/style/css/all.css
@@ -1,3 +1,31 @@
+.ta-center {
+  text-align: center;
+}
+
+.fz-24 {
+  font-size: 24px;
+}
+
+.d-flex {
+  display: flex;
+}
+
+.ai-center {
+  align-items: center;
+}
+
+.poa {
+  position: absolute;
+}
+
+.por {
+  position: relative;
+}
+
+.d-none {
+  display: none;
+}
+
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
